// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIKIT | TagInput Snapshots should default 1`] = `
<div>
  <div
    className="uu-tagInput"
    onClick={[Function]}
    role="none"
  >
    <span
      className="uu-multiSelectValue"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          foo
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose"
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <span
      className="uu-multiSelectValue"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          bar
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose"
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <span
      className="uu-multiSelectValue"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          baz
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose"
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <input
      className="uu-tagInputNewItem"
      id="tagInput"
      name="testName"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onPaste={[Function]}
    />
  </div>
  <button
    className="uu-button uu-button_view_dangerLink"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg>
      reset-icon.svg
    </svg>
    <span>
      Сбросить значения
    </span>
  </button>
</div>
`;

exports[`UIKIT | TagInput Snapshots should disabled 1`] = `
<div>
  <div
    className="uu-tagInput"
    onClick={[Function]}
    role="none"
  >
    <span
      className="uu-multiSelectValue uu-multiSelectValue_disabled"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          foo
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose uu-multiSelectValueClose_disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <span
      className="uu-multiSelectValue uu-multiSelectValue_disabled"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          bar
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose uu-multiSelectValueClose_disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <span
      className="uu-multiSelectValue uu-multiSelectValue_disabled"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          baz
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose uu-multiSelectValueClose_disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <input
      className="uu-tagInputNewItem"
      disabled={true}
      id="tagInput"
      name="testName"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onPaste={[Function]}
    />
  </div>
  <button
    className="uu-button uu-button_view_dangerLink"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg>
      reset-icon.svg
    </svg>
    <span>
      Сбросить значения
    </span>
  </button>
</div>
`;

exports[`UIKIT | TagInput Snapshots should labeled column 1`] = `
<div
  className="uu-labeled_direction_column"
>
  <label
    aria-label="labeled"
    className="uu-labeledLabel_direction_column uu-label uu-label_text"
    htmlFor="tagInput"
  >
    labeled
  </label>
  <div>
    <div
      className="uu-tagInput"
      onClick={[Function]}
      role="none"
    >
      <span
        className="uu-multiSelectValue"
      >
        <div
          className="uu-multiSelectValueText"
        >
          <span
            className="uu-tagInputTagValue"
          >
            foo
          </span>
        </div>
        <button
          className="uu-multiSelectValueClose"
          onClick={[Function]}
          type="button"
        >
          <svg>
            icon-close.svg
          </svg>
        </button>
      </span>
      <span
        className="uu-multiSelectValue"
      >
        <div
          className="uu-multiSelectValueText"
        >
          <span
            className="uu-tagInputTagValue"
          >
            bar
          </span>
        </div>
        <button
          className="uu-multiSelectValueClose"
          onClick={[Function]}
          type="button"
        >
          <svg>
            icon-close.svg
          </svg>
        </button>
      </span>
      <span
        className="uu-multiSelectValue"
      >
        <div
          className="uu-multiSelectValueText"
        >
          <span
            className="uu-tagInputTagValue"
          >
            baz
          </span>
        </div>
        <button
          className="uu-multiSelectValueClose"
          onClick={[Function]}
          type="button"
        >
          <svg>
            icon-close.svg
          </svg>
        </button>
      </span>
      <input
        className="uu-tagInputNewItem"
        id="tagInput"
        name="testName"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
      />
    </div>
    <button
      className="uu-button uu-button_view_dangerLink"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg>
        reset-icon.svg
      </svg>
      <span>
        Сбросить значения
      </span>
    </button>
  </div>
</div>
`;

exports[`UIKIT | TagInput Snapshots should labeled row 1`] = `
<div
  className="uu-labeled_direction_column"
>
  <label
    aria-label="labeled"
    className="uu-labeledLabel_direction_column uu-label uu-label_text"
    htmlFor="tagInput"
  >
    labeled
  </label>
  <div>
    <div
      className="uu-tagInput"
      onClick={[Function]}
      role="none"
    >
      <span
        className="uu-multiSelectValue"
      >
        <div
          className="uu-multiSelectValueText"
        >
          <span
            className="uu-tagInputTagValue"
          >
            foo
          </span>
        </div>
        <button
          className="uu-multiSelectValueClose"
          onClick={[Function]}
          type="button"
        >
          <svg>
            icon-close.svg
          </svg>
        </button>
      </span>
      <span
        className="uu-multiSelectValue"
      >
        <div
          className="uu-multiSelectValueText"
        >
          <span
            className="uu-tagInputTagValue"
          >
            bar
          </span>
        </div>
        <button
          className="uu-multiSelectValueClose"
          onClick={[Function]}
          type="button"
        >
          <svg>
            icon-close.svg
          </svg>
        </button>
      </span>
      <span
        className="uu-multiSelectValue"
      >
        <div
          className="uu-multiSelectValueText"
        >
          <span
            className="uu-tagInputTagValue"
          >
            baz
          </span>
        </div>
        <button
          className="uu-multiSelectValueClose"
          onClick={[Function]}
          type="button"
        >
          <svg>
            icon-close.svg
          </svg>
        </button>
      </span>
      <input
        className="uu-tagInputNewItem"
        id="tagInput"
        name="testName"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
      />
    </div>
    <button
      className="uu-button uu-button_view_dangerLink"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg>
        reset-icon.svg
      </svg>
      <span>
        Сбросить значения
      </span>
    </button>
  </div>
</div>
`;

exports[`UIKIT | TagInput Snapshots should with error 1`] = `
<div>
  <div
    className="uu-tagInput uu-input_hasError"
    onClick={[Function]}
    role="none"
  >
    <span
      className="uu-multiSelectValue"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          foo
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose"
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <span
      className="uu-multiSelectValue"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          bar
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose"
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <span
      className="uu-multiSelectValue"
    >
      <div
        className="uu-multiSelectValueText"
      >
        <span
          className="uu-tagInputTagValue"
        >
          baz
        </span>
      </div>
      <button
        className="uu-multiSelectValueClose"
        onClick={[Function]}
        type="button"
      >
        <svg>
          icon-close.svg
        </svg>
      </button>
    </span>
    <input
      className="uu-tagInputNewItem"
      id="tagInput"
      name="testName"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onPaste={[Function]}
    />
    <div
      className="uu-inputError"
    >
      <svg
        className="uu-inputErrorIcon uu-tooltipRoot uu-popoverRoot"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        error.svg
      </svg>
    </div>
  </div>
  <button
    className="uu-button uu-button_view_dangerLink"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg>
      reset-icon.svg
    </svg>
    <span>
      Сбросить значения
    </span>
  </button>
</div>
`;
